--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,7 @@
 
         <p class="light">
           We provide a  clean, reliable water supply to the city. You can find
-          out how we are doing <a href="/waterstats">here</a>
+          out how we are doing <a href="/stats">here</a>
         </p>
       </div>
     </div>
